--- a/server-src/CMakeLists.txt
+++ b/server-src/CMakeLists.txt
@@ -12,11 +12,13 @@ set(SERVER_INC_DIR ${PROJECT_SOURCE_DIR}/include)
 
 set(SERVER_SRC_LIST
         ${SERVER_SRC_DIR}/main.c
+        ${SERVER_SRC_DIR}/manager.c
         ${SERVER_SRC_DIR}/server.c
         ${SERVER_SRC_DIR}/server-util.c
         ${SERVER_SRC_DIR}/setup.c
         )
 set(SERVER_HDR_LIST
+        ${SERVER_INC_DIR}/manager.h
         ${SERVER_INC_DIR}/server.h
         ${SERVER_INC_DIR}/server-util.h
         ${SERVER_INC_DIR}/setup.h
