Add controller and game to client

--- a/client-src/CMakeLists.txt
+++ b/client-src/CMakeLists.txt
@@ -14,6 +14,8 @@ set(CLIENT_INC_DIR ${PROJECT_SOURCE_DIR}/include)
 set(CLIENT_SRC_LIST
         ${CLIENT_SRC_DIR}/client.c
         ${CLIENT_SRC_DIR}/client-util.c
+        ${CLIENT_SRC_DIR}/Controller.c # By Prabh Sokhey
+        ${CLIENT_SRC_DIR}/Game.c # By Prabh Sokhey
         ${CLIENT_SRC_DIR}/main.c
         ${CLIENT_SRC_DIR}/manager.c
         ${CLIENT_SRC_DIR}/setup.c
@@ -21,6 +23,8 @@ set(CLIENT_SRC_LIST
 set(CLIENT_HDR_LIST
         ${CLIENT_INC_DIR}/client.h
         ${CLIENT_INC_DIR}/client-util.h
+        ${CLIENT_INC_DIR}/Controller.h # By Prabh Sokhey
+        ${CLIENT_INC_DIR}/Game.h # By Prabh Sokhey
         ${CLIENT_INC_DIR}/manager.h
         ${CLIENT_INC_DIR}/setup.h
         )
