--- a/client-src/CMakeLists.txt
+++ b/client-src/CMakeLists.txt
@@ -1,11 +1,11 @@
-cmake_minimum_required(VERSION 3.22)
+cmake_minimum_required(VERSION 3.18.4)
 
 project(reliable-udp
         VERSION 0.0.1
         DESCRIPTION ""
         LANGUAGES C)
 
-set(CMAKE_C_STANDARD 17)
+set(CMAKE_C_STANDARD 99)
 
 # Client:
 set(CLIENT_SRC_DIR ${PROJECT_SOURCE_DIR}/src)
@@ -14,7 +14,7 @@ set(CLIENT_INC_DIR ${PROJECT_SOURCE_DIR}/include)
 set(CLIENT_SRC_LIST
         ${CLIENT_SRC_DIR}/client.c
         ${CLIENT_SRC_DIR}/client-util.c
-#        ${CLIENT_SRC_DIR}/Controller.c # By Prabh Sokhey
+        ${CLIENT_SRC_DIR}/Controller.c # By Prabh Sokhey
         ${CLIENT_SRC_DIR}/Game.c # By Prabh Sokhey
         ${CLIENT_SRC_DIR}/main.c
         ${CLIENT_SRC_DIR}/manager.c
@@ -23,7 +23,7 @@ set(CLIENT_SRC_LIST
 set(CLIENT_HDR_LIST
         ${CLIENT_INC_DIR}/client.h
         ${CLIENT_INC_DIR}/client-util.h
-#        ${CLIENT_INC_DIR}/Controller.h # By Prabh Sokhey
+        ${CLIENT_INC_DIR}/Controller.h # By Prabh Sokhey
         ${CLIENT_INC_DIR}/Game.h # By Prabh Sokhey
         ${CLIENT_INC_DIR}/manager.h
         ${CLIENT_INC_DIR}/setup.h
@@ -160,8 +160,8 @@ add_executable(client ${CLIENT_SRC_LIST})
 add_dependencies(client doxygen-client)
 
 # wiringPi libraries : Comment out to allow build if libraries not installed.
-#target_include_directories(client PRIVATE include)
-#target_include_directories(client PRIVATE /usr/local/include)
-#target_link_directories(client PRIVATE /usr/local/lib)
-#find_library(WIRINGPI_LIBRARIES NAMES wiringPi)
-#target_link_libraries(client ${WIRINGPI_LIBRARIES})
+target_include_directories(client PRIVATE include)
+target_include_directories(client PRIVATE /usr/local/include)
+target_link_directories(client PRIVATE /usr/local/lib)
+find_library(WIRINGPI_LIBRARIES NAMES wiringPi)
+target_link_libraries(client ${WIRINGPI_LIBRARIES})
